# gymeal

./: .editorconfig  .example.env  .gitignore  Brewfile  README.md  SECURITY.md  docker-compose.yml  package.json  turbo.json
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/ai-service/: package.json  pyproject.toml
apps/ai-service/app/: dependencies.py  main.py
apps/ai-service/app/core/: config.py  database.py  security.py
apps/ai-service/app/routers/: admin.py  chat.py  nutrition.py  recommendations.py
apps/back-end/: Gymeal.sln  package.json
apps/back-end/docs/: 01-environment-setup.md  02-solution-structure.md  03-domain-layer.md  05-application-layer.md  06-infrastructure-layer.md  07-graphql-setup.md  08-rest-controllers.md
apps/back-end/src/Gymeal.Application/: DependencyInjection.cs  Gymeal.Application.csproj
apps/back-end/src/Gymeal.Domain/: Gymeal.Domain.csproj
apps/back-end/src/Gymeal.Infrastructure/: DependencyInjection.cs  Gymeal.Infrastructure.csproj
apps/back-end/src/Gymeal.Presentation/: .editorconfig  Gymeal.Presentation.csproj  Program.cs  appsettings.json
apps/back-end/tests/Gymeal.Application.Tests/: Gymeal.Application.Tests.csproj
apps/front-end/: .eslintrc.json  .prettierrc  middleware.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/front-end/app/: error.tsx  globals.css  layout.tsx  page.tsx
apps/front-end/docs/: 01-environment-setup.md  02-typescript-config.md  03-nextjs-setup.md  04-tailwind-setup.md  05-lint-prettier.md
docker/: init-db.sql
scripts/: setup.sh
(+164 files in other folders)
